--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
   <div class="container" id="buildContainer">
     <!-- Contoh 1 -->
     <div class="card" data-category="house" data-name="Rumah Medieval">
-      <img src="LINK-GAMBAR-1" alt="Rumah Medieval">
-      <h2>Rumah Medieval</h2>
-      <a class="download-btn" href="LINK-SCHEMATIC-1" download>Download</a>
+      <img src="535fb9a2-4b41-463f-913d-d240c6478717.jpeg" alt="Rumah Medieval">
+      <h2>Simple House</h2>
+      <a class="https://link.adsafelink.com/PD83ah" href="LINK-SCHEMATIC-1" download>Download</a>
     </div>
 
     <!-- Contoh 2 -->
