--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
     </div>
 
     <!-- Contoh 2 -->
-    <div class="card" data-category="barn" data-name="Gudang Kayu">
-      <img src="LINK-GAMBAR-2" alt="Gudang Kayu">
-      <h2>Gudang Kayu</h2>
-      <a class="download-btn" href="LINK-SCHEMATIC-2" download>Download</a>
+    <div class="build-card">
+  <h2>Fantasy House 2</h2>
+  <img src="assets/images/fantasy-house-2.jpg" alt="Fantasy House 2" width="100%" />
+  <a href="https://link.adsafelink.com/PD83ah" target="_blank">Download Schematic</a>
     </div>
 
     <!-- Contoh 3 -->
