--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </header>
 
 <div class="container">
-    <div class="download-section">
+    <div class="https://link.adsafelink.com/PD83ah">
         <h2>Download Your Favorite Minecraft Build</h2>
         <!-- Gambar bangunan Minecraft -->
         <img src="https://via.placeholder.com/400x300.png?text=Minecraft+Building+Image" alt="Minecraft Building" class="schematic-image">
